--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,10 @@
 html,
+/* html {
+} */
+
 body {
   padding: 0;
+  scroll-behavior: smooth;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
